--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 .sidenav {
     height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 240px; /* Set the width of the sidebar */
+    width: 270px; /* Set the width of the sidebar */
     position: fixed; /* Fixed Sidebar (stay in place on scroll) */
     z-index: 1; /* Stay on top */
     top: 0; /* Stay at the top */
@@ -31,4 +31,8 @@
 
 .mb-0 {
     text-indent: 5px;
+}
+
+#routes {
+    padding-bottom: 20px;
 }
