--- a/style.css
+++ b/style.css
@@ -45,3 +45,11 @@
 #label {
     padding-left: 5px;
 }
+
+.centre {
+    margin: 0;
+    position: absolute;
+    left: 38%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
